test/tests/operators/window/error_bytes_output.txt
error: subpipeline must not produce bytes
 --> tests/operators/window/error_bytes_output.tql:6:23
  |
6 | window size=1s, on=ts {
  |                       ^^^^^^^^^^^^^^^^ 
  |
